Frontend sub-catagory finished. Alot of spelling mistakes I know, spell check is for the weak

--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,8 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+
+.projects-flexWrap {
+    display: flex;
+    flex-wrap: wrap;
+}
