--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #9a8478, #1e130c);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 100%;
 }
 
 .landing-avatar {
@@ -80,5 +81,71 @@
 
 .projects-flexWrap {
     display: flex;
+    flex-wrap: wrap;
+}
+
+.contact-header {
+    background: #aa4b6b;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.contact-body {
+    background: #dddddd;
+    margin: auto;
+    position: fixed;
+    width: 80%;
+    height: 100%;
+    flex-wrap: wrap;
+}
+
+.contact-grid {
+    background: #fff;
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    height: 100%;
+    color: #000;
+    border: 2px solid red;
+    margin-bottom: 20px;
+    margin-top: 115px;
+}
+
+.contact-grid h2 {
+    font-family: 'Anton', sans-serif;
+}
+
+.contact-grid p {
+    font-family: 'Oxygen', sans-serif;
+    font-weight: bold
+}
+
+.contact-grid hr {
+    border-top: 5px dotted #000;
+    width: 50%;
+    margin: auto;
+}
+
+.contact-avatar {
+    height: 200px;
+    margin-top: 5em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.contact-avatar-bkground {
+    border-radius: 15px;
+    background: #aa4b6b;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    margin-bottom: 15px;
     flex-wrap: wrap;
 }
