about me formatted with dummy text and photo, you need headshots bro

--- a/src/App.css
+++ b/src/App.css
@@ -157,21 +157,31 @@
 }
 
 .aboutMe-header {
-    background: #283048;
+    background: #6D6027;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #859398, #283048);
+    background: -webkit-linear-gradient(to right, #D3CBB8, #6D6027);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #859398, #283048);
+    background: linear-gradient(to right, #D3CBB8, #6D6027);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .hello {
-    width: 100%;
+    width: 60%;
+    display: block;
+    margin: 0 auto;
 }
 
 .thats_me {
-    width: 100%;
-    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    box-shadow: 10px 10px 5px grey
+}
+
+.aboutMe_bio {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 26px;
+    text-indent: 60px
 }
 
 /* Resume CSS */
