alot of :hover :active CSS to add to UX

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     height: 100%;
 }
 
+/* Home Page */
 .landing-grid {
     background: #1e130c;
     /* fallback for old browsers */
@@ -24,7 +25,18 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 50px;
+    animation-name: reset, fade-in;
+    animation-duration: .3s;
+    animation-timing-function: ease-in;
+    transition: .2s;
+}
+
+.landing-avatar:hover {
+    transform: scale(1.03);
+}
+
+.landing-avatar:active {
+    transform: scale(.9);
 }
 
 .banner-text {
@@ -32,6 +44,9 @@
     width: 75%;
     margin: auto;
     border-radius: 10px;
+    animation-name: reset, fade-in;
+    animation-duration: .6s;
+    animation-timing-function: ease-in;
 }
 
 .banner-text h1 {
@@ -61,14 +76,25 @@
     justify-content: center;
     width: 50%;
     margin: auto;
+    transition: transform .2s;
 }
 
 .social-links i {
     color: white;
     font-size: 1em;
     margin: 15px;
+    transition: transform .2s;
 }
 
+.social-links i:hover {
+    transform: scale(1.03);
+}
+
+.social-links i:active {
+    transform: scale(.9);
+}
+
+/* Projects Page */
 .tab-header {
     background: #1D2B64;
     /* fallback for old browsers */
@@ -82,6 +108,21 @@
 .projects-flexWrap {
     display: flex;
     flex-wrap: wrap;
+}
+
+.projectCard {
+    transition: transform .2s;
+    animation-name: reset, fade-in;
+    animation-duration: .3s;
+    animation-timing-function: ease-in;
+}
+
+.projectCard:hover {
+    transform: scale(1.03);
+}
+
+.projectCard:active {
+    transform: scale(.9);
 }
 
 .contact-header {
@@ -169,13 +210,33 @@
     width: 60%;
     display: block;
     margin: 0 auto;
+    animation-name: reset, fade-in;
+    animation-duration: .6s;
+    animation-timing-function: ease-in;
+    transition: .2s;
+}
+
+.hello:hover {
+    transform: scale(1.01);
 }
 
 .thats_me {
     display: block;
     margin: 0 auto;
     width: 80%;
-    box-shadow: 10px 10px 5px grey
+    box-shadow: 10px 10px 5px grey;
+    animation-name: reset, fade-in;
+    animation-duration: .3s;
+    animation-timing-function: ease-in;
+    transition: .2s;
+}
+
+.thats_me:hover {
+    transform: scale(1.01);
+}
+
+.thats_me:active {
+    transform: scale(.9);
 }
 
 .aboutMe_bio {
@@ -183,9 +244,18 @@
     margin: 0 auto;
     width: 80%;
     font-family: 'Montserrat', sans-serif;
+    /* If You are reading my font size, I chose this size to be the most level with my picture @1366px width, or 35% of the world, the more you know 😉*/
     font-size: 16px;
     text-indent: 60px;
     line-height: 2;
+    animation-name: reset, fade-in;
+    animation-duration: .6s;
+    animation-timing-function: ease-in;
+    transition: .2s;
+}
+
+.aboutMe_bio:hover {
+    transform: scale(1.01);
 }
 
 /* Resume CSS */
@@ -211,6 +281,16 @@
     max-width: 800px;
     background: #f3f3f3;
     margin: 30px auto;
+    box-shadow: 10px 10px 5px black;
+    transition: .2s;
+}
+
+.cv:hover {
+    transform: scale(1.05);
+}
+
+.cv:active {
+    transform: scale(.9);
 }
 
 .mainDetails {
