--- a/src/App.css
+++ b/src/App.css
@@ -323,20 +323,20 @@
 }
 
 .mainDetails {
-    padding: 25px 35px;
+    padding: 10px 35px;
     border-bottom: 2px solid #cf8a05;
     background: #ededed;
 }
 
 .name h1 {
-    font-size: 2.5em;
+    font-size: 35px;
     font-weight: 700;
     font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
     margin-bottom: -6px;
 }
 
 .name h2 {
-    font-size: 2em;
+    font-size: 28px;
     margin-left: 2px;
     font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
 }
@@ -355,7 +355,7 @@
 
 .contactDetails ul {
     list-style-type: none;
-    font-size: 0.9em;
+    font-size: 14px;
     margin-top: 2px;
 }
 
@@ -383,7 +383,7 @@ a[href^=tel] {
 
 section {
     border-top: 1px solid #dedede;
-    padding: 20px 0 0;
+    padding: 5px 0 0;
 }
 
 section:first-child {
@@ -407,27 +407,27 @@ section:last-child {
 .sectionTitle h1 {
     font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
     font-style: italic;
-    font-size: 1.5em;
+    font-size: 22px;
     color: #cf8a05;
 }
 
 .sectionContent h2 {
     font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: -2px;
 }
 
 .subDetails {
-    font-size: 0.8em;
+    font-size: 10px;
     font-style: italic;
     margin-bottom: 3px;
 }
 
 .keySkills {
     list-style-type: none;
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
+    -moz-column-count: 5;
+    -webkit-column-count: 5;
+    column-count: 5;
     margin-bottom: 20px;
     font-size: 1em;
     color: #444;
@@ -438,7 +438,7 @@ section:last-child {
 }
 
 /* Resume Responsivness */
-@media all and (min-width: 602px) and (max-width: 800px) {
+@media all and (min-width: 865px) {
     .keySkills {
         -moz-column-count: 2;
         -webkit-column-count: 2;
@@ -446,7 +446,7 @@ section:last-child {
     }
 }
 
-@media all and (max-width: 601px) {
+@media all and (max-width: 865px) {
     .cv {
         width: 95%;
         margin: 10px auto;
@@ -462,6 +462,8 @@ section:last-child {
         float: none;
         width: 100%;
         text-align: center;
+        margin-left: auto;
+        margin-right: auto
     }
 
     .sectionTitle,
@@ -472,7 +474,7 @@ section:last-child {
 
     .sectionTitle {
         margin-left: -2px;
-        font-size: 1.25em;
+        font-size: 5px;
     }
 
     .keySkills {
@@ -484,7 +486,7 @@ section:last-child {
 
 @media all and (max-width: 480px) {
     .mainDetails {
-        padding: 15px 15px;
+        padding: 10px 10px;
     }
 
     section {
