rewriting skills section and cutting some fat :)

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -73,9 +73,7 @@ p.lead {
 
 .dev-icons {
   font-size: 3rem;
-  .list-inline-item i {
-    &:hover {
-      color: $primary;
-    }
+  .list-inline-item img {
+    background-color: red;
   }
 }
